WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Log_integracao__c.object
<CustomObject>
    <fields>
        <fullName>Data_hora_envio__c</fullName>
        <label>Data/hora de envio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_hora_resposta__c</fullName>
        <label>Data/hora de resposta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_registro__c</fullName>
        <label>Id do registro</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_registro__c</fullName>
        <label>Nome do registro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registro_relacionado__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Id_registro__c, Nome_registro__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registro relacionado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOAPAction__c</fullName>
        <label>SOAPAction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sistema__c</fullName>
        <label>Sistema</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tempo_resposta__c</fullName>
        <formula>( ( ( Data_hora_resposta__c - Data_hora_envio__c ) * 24 )* 60 ) * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Em segundos</inlineHelpText>
        <label>Tempo de resposta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XML_envio__c</fullName>
        <label>XML envio</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XML_resposta__c</fullName>
        <label>XML resposta</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log integração</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Data_hora_envio__c</columns>
        <columns>Data_hora_resposta__c</columns>
        <columns>Endpoint__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Nome_registro__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>LI-{000000}</displayFormat>
        <label>Cód. Log integração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>